--- a/hello-kubernetes-routingManifest.yml
+++ b/hello-kubernetes-routingManifest.yml
@@ -25,7 +25,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /
+        prefix: /hello
     route:
     - destination:
         host: hello-kubernetes-service.default.svc.cluster.local
